fixed misaligned tab content - fixes #3715

--- a/terminus-core/src/components/appRoot.component.scss
+++ b/terminus-core/src/components/appRoot.component.scss
@@ -146,7 +146,7 @@ $side-tab-width: 200px;
         width: 100%;
         height: 100%;
 
-        left: 100%;
+        left: -100%;
 
         &.content-tab-active {
             left: 0;
